--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gollery">
         <activity
+            android:name=".FrameActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
